margin issue on mobile responsivity

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -470,7 +470,7 @@
 
     .services__text {
         height: auto;
-        margin-top: 1rem;
+        margin-top: 4rem;
     }
 
     .services__container {
@@ -490,8 +490,7 @@
 
     .services__text {
         height: auto;
-        margin-top: 1rem;
-
+        margin-top: 6rem;
     }
 
     .services__container {
